# Beluga

./: package-lock.json  secrets.toml  workspace.toml  wow.py
api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  config.py  config.toml  conftest.py  docker-compose.yml  pytest.ini  requirements.txt
api/Python-3.13.0/: Makefile  Makefile.pre  config.status
api/src/: __init__.py
api/tests/: conftest.py  test_assignments.py  test_auth.py  test_authentication.py  test_container.py  test_courses.py  test_enrollment.py  test_image.py  test_role.py  test_submissions.py  test_term.py  test_users.py
deployment/ansible/: .gitignore  README.md  beluga-build-vm.yml  beluga-containers-vm.yml  beluga-registry-vm.yml  build.py  build.sh  delete.sh  fcos-config.yml  (+5 more)
deployment/beluga/: .gitignore  pyproject.toml
deployment/beluga/src/beluga/: __init__.py  __main__.py
deployment/beluga/src/beluga/common/: run.py  secrets.py  template.py  utils.py
deployment/beluga/src/beluga/core/cli/: __init__.py  beluga.py  cli.py  deploy.py  secrets.py
deployment/beluga/src/beluga/core/schema/: config.py  workspace.py
deployment/beluga/src/beluga/plugins/coreos/: cli.py  coreos.py
deployment/beluga/src/beluga/plugins/docker/: cli.py  docker.py
deployment/beluga/src/beluga/plugins/network/: cli.py  nginx.py  portmap.py  ssh.py
deployment/beluga/src/beluga/plugins/services/: api.py  cli.py  db.py  ui.py
deployment/beluga/src/beluga/plugins/users/: cli.py
deployment/beluga/src/beluga/plugins/virtualbox/: cli.py  virtualbox.py
deployment/beluga/src/beluga/templates/nginx/: api  certs  map  ui
deployment/beluga/src/beluga/templates/vm/: beluga-fedora.dockerfile  ssh_config
docs/: containers.md
ui/: Makefile  config.toml  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+503 files in other folders)
